# stable-retro

./: .gitignore  CMakeLists.txt  setup.cfg  setup.py
.github/workflows/: build-publish.yml  test-cpp.yml  test-python.yml
cores/gb/: .gitlab-ci.yml
cores/gb/libgambatte/libretro/: gbcpalettes.h
cores/gb/libgambatte/src/mem/: huc3.cpp  huc3.h
docs/: conf.py
retro/: __init__.py
src/: coreinfo.cpp  data-capnp.cpp  emulator.cpp  memory.h  search.h  utils.h
src/ui/: CMakeLists.txt
tests/: emulator.cpp
tests/test_python/: test_env.py  test_load.py
