[metadata]
name = stable-retro
version = file: retro/VERSION
author = Farama Foundation
author_email = contact@farama.com
url = https://github.com/farama-foundation/stable-retro
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.8.0,<3.13
install_requires =
    gymnasium>=0.27.1
    pyglet>=1.3.2,==1.*
    farama-notifications>=0.0.1

[options.packages.find]
include =
    retro
    retro.data
    retro.data.stable
    retro.data.experimental
    retro.data.contrib
    retro.scripts
    retro.import
    retro.examples

[options.package_data]
retro =
    cores/*.json
    cores/*_libretro*
    VERSION
    README.md
    LICENSES.md

[pycodestyle]
exclude = third-party,cores,docker/linux
ignore = E501

[tool:pytest]
norecursedirs = third-party cores
